--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Header -->
     <header>
-      <div class="header_top"></div>
+      <div class="header_top">
         <div class="container">
           <div class="row">
             <!-- Logo -->
@@ -38,12 +38,57 @@
             <!-- Menù -->
           </div>
         </div>
+      </div>
 
+      <!-- Jumbotron -->
+
+      <div class="jumbo bg_teal pad">
+        <div class="jumbo_text">
+          <img src="img/avataaars.svg"  class="avatar mgn_bottom" alt="avatar">
+          <h1 class="mgn_bottom">START BOOTSTRAP</h1>
+          <div class="mgn_bottom"><hr><span class="glyphicon glyphicon-star star " aria-hidden="true"></span><hr></div>
+          <p> Graphic Artist- Web Designer - Illustrator</p>
+        </div>
+      </div>
+      <!-- /Jumbotron -->
     </header>
     <!-- /Header -->
 
     <!-- Main -->
     <main>
+      <!-- Portfolio -->
+      <section id="portfolio" class="pad">
+        <h2>PORTFOLIO</h2>
+        <div class="mgn_top mgn_bottom"><hr class="hr_blue"><span class="glyphicon glyphicon-star star recolor_blue " aria-hidden="true"></span><hr class="hr_blue"></div>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <img src="img/cabin.png" alt="cabin" class="box_port">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <img src="img/cake.png" alt="cake" class="box_port">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <img src="img/circus.png" alt="circus" class="box_port">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <img src="img/game.png" alt="game" class="box_port">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <img src="img/safe.png" alt="safe" class="box_port">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <img src="img/submarine.png" alt="submarine" class="box_port">
+            </div>
+
+
+          </div>
+
+        </div>
+      </section>
+
+      <!-- Portfolio -->
 
     </main>
     <!-- /Main -->
