--- a/index.html
+++ b/index.html
@@ -81,14 +81,36 @@
             <div class="col-xs-12 col-sm-6 col-md-4">
               <img src="img/submarine.png" alt="submarine" class="box_port">
             </div>
-
-
           </div>
-
         </div>
       </section>
-
       <!-- Portfolio -->
+
+      <!-- About -->
+      <section id="about" class="bg_teal pad">
+        <h2 class=>ABOUT</h2>
+        <div class="mgn_top mgn_bottom"><hr><span class="glyphicon glyphicon-star star" aria-hidden="true"></span><hr></div>
+          <div class="wrapper_small">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-xs-12 col-md-6 text_left">
+                  <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                </div>
+                <div class="col-xs-12 col-md-6 text_left">
+                  <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+                </div>
+                <div class="col-xs-12 text-center">
+                  <button type="button" class="btn btn-default btn-lg btn_down mgn_top">
+                    <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Free Download!
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+      </section>
+      <!-- /About -->
 
     </main>
     <!-- /Main -->
