--- a/index.html
+++ b/index.html
@@ -107,10 +107,40 @@
               </div>
             </div>
           </div>
-
-
       </section>
       <!-- /About -->
+
+      <!-- Form -->
+      <section id="form" class="pad">
+        <h2>CONTACT ME</h2>
+        <div class="mgn_top mgn_bottom"><hr class="hr_blue"><span class="glyphicon glyphicon-star star recolor_blue " aria-hidden="true"></span><hr class="hr_blue"></div>
+        <div class="wrapper_small">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="info_form mgn_top">
+                  <input type="text" class="form-control form_text" placeholder="Name">
+                </div>
+                <div class="info_form">
+                  <input type="text" class="form-control form_text" placeholder="Email Address">
+                </div>
+                <div class="info_form">
+                  <input type="text" class="form-control form_text" placeholder="Phone Number">
+                </div>
+                <div class="info_form">
+                  <textarea class="form-control form_text" rows="5" placeholder="Message"></textarea>
+                </div>
+
+                  <div class="text_left"><button type="button" class="btn btn-lg btn_send mgn_top"> Send</button></div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </section>
+      <!-- /Form -->
+
 
     </main>
     <!-- /Main -->
