--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -93,13 +94,13 @@
           <div class="wrapper_small">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-xs-12 col-md-6 text_left">
+                <div class="col-xs-12 col-md-6 text-left">
                   <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
                 </div>
-                <div class="col-xs-12 col-md-6 text_left">
+                <div class="col-xs-12 col-md-6 text-left">
                   <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
                 </div>
-                <div class="col-xs-12 text-center">
+                <div class="col-xs-12">
                   <button type="button" class="btn btn-default btn-lg btn_down mgn_top">
                     <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Free Download!
                   </button>
@@ -131,23 +132,45 @@
                   <textarea class="form-control form_text" rows="5" placeholder="Message"></textarea>
                 </div>
 
-                  <div class="text_left"><button type="button" class="btn btn-lg btn_send mgn_top"> Send</button></div>
+                  <div class="text-left"><button type="button" class="btn btn-lg btn_send mgn_top"> Send</button></div>
               </div>
             </div>
           </div>
-
         </div>
-
       </section>
       <!-- /Form -->
-
 
     </main>
     <!-- /Main -->
 
 
     <!-- Footer -->
-    <footer></footer>
+    <footer>
+      <div id="footer_contact"class="pad">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-4 ">
+              <h3>LOCATION</h3>
+              <p>2215 John Daniel Drive <br>Clark, MO 65243</p>
+            </div>
+            <div class="col-xs-12 col-md-4">
+              <h3>AROUND THE WEB</h3>
+              <ul>
+                <li><i class="fab fa-facebook-f contact_icon"></i></li>
+              </ul>
+            </div>
+            <div class="col-xs-12 col-md-4">
+              <h3>ABOUT FREELANCER</h3>
+              <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap .</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="firma"></div>
+
+
+    </footer>
     <!-- /Footer -->
   </body>
 </html>
