--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="jumbo_text">
           <img src="img/avataaars.svg"  class="avatar mgn_bottom" alt="avatar">
           <h1 class="mgn_bottom">START BOOTSTRAP</h1>
-          <div class="mgn_bottom"><hr><span class="glyphicon glyphicon-star star " aria-hidden="true"></span><hr></div>
+          <div class="mgn_bottom star"><i class="fas fa-star"></i></div>
           <p> Graphic Artist- Web Designer - Illustrator</p>
         </div>
       </div>
@@ -60,12 +60,14 @@
       <!-- Portfolio -->
       <section id="portfolio" class="pad">
         <h2>PORTFOLIO</h2>
-        <div class="mgn_top mgn_bottom"><hr class="hr_blue"><span class="glyphicon glyphicon-star star recolor_blue " aria-hidden="true"></span><hr class="hr_blue"></div>
-
+        <div class="mgn_top mgn_bottom star_dark"><i class="fas fa-star"></i></div>
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4">
-              <img src="img/cabin.png" alt="cabin" class="box_port">
+            <div class="col-xs-12 col-sm-6 col-md-4 ">
+              <div class="box_port">
+                <div class="overlay"></div>
+                <img src="img/cabin.png" alt="cabin" class="img-responsive">
+              </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <img src="img/cake.png" alt="cake" class="box_port">
@@ -90,7 +92,7 @@
       <!-- About -->
       <section id="about" class="bg_teal pad">
         <h2 class=>ABOUT</h2>
-        <div class="mgn_top mgn_bottom"><hr><span class="glyphicon glyphicon-star star" aria-hidden="true"></span><hr></div>
+        <div class="mgn_top mgn_bottom star"><i class="fas fa-star"></i></div>
           <div class="wrapper_small">
             <div class="container-fluid">
               <div class="row">
@@ -114,7 +116,7 @@
       <!-- Form -->
       <section id="form" class="pad">
         <h2>CONTACT ME</h2>
-        <div class="mgn_top mgn_bottom"><hr class="hr_blue"><span class="glyphicon glyphicon-star star recolor_blue " aria-hidden="true"></span><hr class="hr_blue"></div>
+        <div class="mgn_top mgn_bottom star_dark"><i class="fas fa-star"></i></div>
         <div class="wrapper_small">
           <div class="container-fluid">
             <div class="row">
@@ -149,17 +151,20 @@
       <div id="footer_contact"class="pad">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-md-4 ">
+            <div class="col-xs-12 col-md-4 mg_top_xs ">
               <h3>LOCATION</h3>
               <p>2215 John Daniel Drive <br>Clark, MO 65243</p>
             </div>
-            <div class="col-xs-12 col-md-4">
+            <div class="col-xs-12 col-md-4 mg_top_xs">
               <h3>AROUND THE WEB</h3>
-              <ul>
-                <li><i class="fab fa-facebook-f contact_icon"></i></li>
+              <ul class="mgn_top_20 pad_ul">
+                <li class="social"><i class="fab fa-facebook-f"></i></li>
+                <li class="social"><i class="fab fa-facebook-f"></i></li>
+                <li class="social"><i class="fab fa-facebook-f"></i></li>
+                <li class="social"><i class="fab fa-facebook-f"></i></li>
               </ul>
             </div>
-            <div class="col-xs-12 col-md-4">
+            <div class="col-xs-12 col-md-4 mg_top_xs">
               <h3>ABOUT FREELANCER</h3>
               <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap .</p>
             </div>
@@ -167,7 +172,7 @@
 
         </div>
       </div>
-      <div class="firma"></div>
+      <div id="firma">Copyright © Your Website 2020</div>
 
 
     </footer>
